Compiler/test_inputs/valid/07_nested_calls.mt
@triton.jit
def nested(x, out): {
  tl.store(out, tl.load(x));
}
