Compiler/test_inputs/invalid/11_bad_argument_separator.mt
@triton.jit
def bad_args(x): {
  y = foo(x 1);
}
